# visual-computing-fundamentals

./: README.md
.github/workflows/: ci.yml
gloom-rs/: .rustfmt.toml  Cargo.toml
gloom-rs/shaders/: fragShaderRestCode.txt  simple.frag  simple.vert
gloom-rs/src/: lib.rs  main.rs  mesh.rs  restCode.txt  scene_graph.rs  shader.rs  toolbox.rs  util.rs
