[package]
name = "gloom-rs"
version = "0.3.0"
default-run = "gloom-rs" # or "thread"
authors = [
    "Peder b. Sundt <pbsds@hotmail.com>",
    "Michael H. Gimle <michael.gimle@gmail.com>",
    "Michael Brusegard <56915010+michaelbrusegard@users.noreply.github.com>",
    "Christopher Braathen <??>",
]
edition = "2021" # rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.29.1"
gl = "0.14.0"
tobj = "4.0.2"
image = "0.25.2"
nalgebra-glm = "0.19.0"
rand = "0.8.4"
libc = "0.2.132"
